--- a/profiles/express/themes/contrib/fiddlers_green/scss/components/_blocks.scss
+++ b/profiles/express/themes/contrib/fiddlers_green/scss/components/_blocks.scss
@@ -8,12 +8,3 @@
 .new-block-row {
   clear: both;
 }
-#block-logintocreatebulletins, #block-viewmysubmissions {
-  margin: 0 0 0 900px;
-  padding-top: 10px;
-}
-#block-logintocreatebulletins a, #block-viewmysubmissions a {
-  margin-top: 1%;
-  float: right;
-  color: black;
-}
